bus: Add guards against invalid arguments to set_flushing() and poll()

https://bugzilla.gnome.org/show_bug.cgi?id=746871